update for reinstall system

--- a/web_Front/问题-解答/问题-解答.md
+++ b/web_Front/问题-解答/问题-解答.md
@@ -597,3 +597,5 @@ transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1); /*the tick-tack eff
 
 -----------------------------------------------------------------
 
+数组和字符串都可以用 concat 方法吗？
+*Answer:* <mark>是的, 都可以</mark>
